<resources>
    <string name="app_name">家家美食</string>
    <string name="searchHint">请输入商家或商品名字</string>
    <string name="Home">首页</string>
    <string name="Merchant">商家</string>
    <string name="User">我的</string>
    <string name="shoppingCart">购物车</string>
    <string name="allStore">所有店铺</string>

    <!--Home-->
    <string name="footerText">没有啦~~\n每天5家哦~</string>
    <string name="todayRec">今日推荐</string>
    <!--Home-->

    <!-- profile -->
    <string name="myOrder">我的订单</string>
    <string name="deliverOrder">跑腿员订单</string>
    <string name="orderDetail">订单详情</string>
    <string name="orderUnPaid">待付款</string>
    <string name="orderDelivering">进行中</string>
    <string name="orderComplete">已完成</string>
    <string name="workerInfo">我是跑腿员</string>
    <string name="workerSignIn">登录</string>
    <string name="pleaseSignIn">请登录</string>
    <string name="deliverSignUp">注册</string>
    <string name="deliverAndAddrModify">修改</string>
    <string name="addrInfo">我的地址</string>
    <string name="custome">常用</string>
    <string name="add">添加</string>
    <string name="modifyHeader">修改头像</string>
    <string name="userSignIn">请点击登录</string>
    <!--- profile-->
    <!--shoppingcart-->
    <string name="needPay">应付金额:</string>
    <string name="countMoney">￥%s</string>
    <string name="countGoods">去结算</string>
    <string name="deliverFee">含跑腿费:￥%.5s</string>
    <string name="delete">删除</string>
    <string name="enptyShoppingCart">购物车为空</string>
    <!--shoppingcart-->

    <!--Merchant-->
    <string name="tvMerchantAddress">地址:%s</string>
    <string name="tvMerchantNote">商家备注:%s</string>
    <!--Merchant-->

    <!--商品详情-->
    <string name="goodsDetail">商品详情</string>
    <string name="sellNumber">销量:%s</string>
    <string name="buy">去结账</string>
    <!--商品详情-->

    <!--支付-->
    <string name="tvPayAffirmance">确认支付</string>
    <string name="tvPayTitle">确认订单</string>
    <string name="tvSubmitOrder">提交订单</string>
    <!--支付-->

    <!--订单相关-->
    <string name="tvReceiver">收货人:%s</string>
    <string name="tvContactPhone">联系方式:%s</string>
    <string name="tvReceiveAddress">收货地址:%s</string>
    <string name="tvNote">备注:%s</string>
    <string name="tvDistance">距离%skm</string>
    <string name="tvDeliverRequire">满%s起送</string>
    <string name="tvDeliverFee">配送费%s元</string>
    <string name="tvOrderNumber">订单号: %s</string>
    <string name="goPay">去付款</string>
    <string name="tvDrawback">申请退单</string>
    <string name="tvSummation">合计</string>
    <string name="deliverOrderUnpaid">等待付款</string>
    <string name="deliverOrderUnAccept">等待接单</string>
    <string name="deliverOrderAccept">已经接单</string>
    <string name="deliverOrderDelivering">开始配送</string>
    <string name="deliverOrderDeliverComplete">确认送达</string>
    <string name="deliverOrderFinish">订单完成</string>
    <string name="deliverOrderOther">其他</string>
    <!--订单相关-->

    <!--我的页面-->
    <string name="tvCamera">相机</string>
    <string name="tvGallery">图库</string>
    <!--我的页面-->

    <!--购物车-->
    <string name="emptyCart">购物车为空</string>
    <!--购物车-->

    <!--收货地址-->
    <string name="address">收货地址</string>
    <string name="newAddress">添加新地址</string>
    <string name="modifyAddress">修改地址</string>
    <string name="contactUser">联系人&#160;&#160;&#160;&#160;</string>
    <string name="contactUser_Null">联系人为空</string>
    <string name="contacts">联系方式</string>
    <string name="contacts_Null">联系方式为空</string>
    <string name="contactAddress">收货地址</string>
    <string name="contactErrorFormat">手机号码格式错误</string>
    <string name="contactAddress_Null">收货地址为空</string>
    <string name="contactAddressDetail">补充详细地址(如门牌号、楼层号)</string>
    <string name="sure2Modify">确定修改选中地址？</string>
    <string name="tvSave">保存</string>
    <string name="tvExit">退出账号</string>
    <string name="tvEdit">编辑</string>
    <!--收货地址-->

    <!--收货-->
    <string name="conformReceive">确认收货</string>
    <string name="rate">评分</string>
    <string name="goEvaluate">去评价</string>
    <string name="mouthFeel">口感</string>
    <string name="deliverService">配送服务</string>
    <string name="finish">完成</string>
    <!--收货-->

    <!--搜索-->
    <string name="etSearchHint">输入搜索名称</string>
    <string name="searchHistory">历史搜索</string>
    <string name="searchResult">搜索结果</string>
    <!--搜索-->

    <!--自主点餐-->
    <string name="information">请写下所有您想吃的\n\n 给我们单身狗跑腿员一个体会恋爱的机会\n\n 我们会找遍全城，只为你</string>
    <string name="recommendation">推荐理由:\n%s</string>
    <string name="iWantEat">我想吃&#8230;</string>
    <string name="submit">提交</string>
    <string name="personalOrder">自主点餐</string>
    <string name="startOrder">开始点餐</string>
    <string name="goOrder">GO!</string>
    <!--自主点餐-->

    <!--register-->
    <string name="register">注册</string>
    <string name="phoneNumber">手机号码</string>
    <string name="checkNumber">验证码&#160;&#160;&#160;&#160;</string>
    <string name="getCheckNumber">获取验证码</string>
    <string name="haveRead">我已经阅读同意了本地美食服务协议</string>
    <string name="completeRegister">完成注册</string>
    <string name="agreement">协议</string>
    <string name="tvShopDetail">店铺详情</string>
    <!--register-->

    <string name="tvHotFood">热销单品</string>
    <string name="tvSearch">搜索</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="prompt">提示</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="send_fail">发送消息失败</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="no_more_messages">没有更多的消息了</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="picture">[图片]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="recoding_fail">发送消息失败,</string>
    <string name="release_to_cancel">松开手指，取消发送</string>


</resources>
